# execute-command

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  release-note.sh  version.sh
.cargo-husky/hooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: lib.rs
