[package]
name = "execute-command"
version = "0.2.0"
edition = "2021"
description = "A simple wrapper arround `Command` to execute programs more easily."
repository = "https://github.com/krazijames/execute-command"
license = "MIT"

[dependencies]
shell-words = "1.1"
thiserror = "1.0"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]
